--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "apollo-server-express": "^3.3.0",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
+    "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21"
   }
 }
