--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,43 +11,52 @@
     "download-graphql-schema": "apollo client:download-schema --endpoint=http://localhost:4000/graphql ./schema.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
+    "@vue/apollo-composable": "^4.0.0-alpha.14",
+    "color": "^3.2.1",
     "core-js": "^3.6.5",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-apollo": "^3.0.0-beta.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "rgbaster": "^2.1.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/color": "^3.0.2",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/composition-api": "^1.1.5",
+    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
-    "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "graphql-tag": "^2.9.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-graphql": "^4.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-apollo": "~0.22.2",
-    "vue-template-compiler": "^2.6.11"
+    "typescript": "~4.1.5",
+    "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,vue}": [
+    "*.{js,jsx,vue,ts,tsx}": [
       "vue-cli-service lint",
       "git add"
     ]
