--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "rgbaster": "^2.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@types/color": "^3.0.2",
@@ -42,9 +43,9 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
+    "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "eslint-plugin-graphql": "^4.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
