--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@apollo/client": "^3.4.11",
     "@vue/apollo-composable": "^4.0.0-alpha.14",
+    "@vueform/multiselect": "^2.2.0",
+    "@vueuse/core": "^5.3.0",
     "color": "^3.2.1",
     "core-js": "^3.6.5",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
+    "intersection-observer": "^0.12.0",
     "register-service-worker": "^1.7.1",
     "rgbaster": "^2.1.1",
     "vue": "^3.0.0",
@@ -42,8 +45,11 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "apollo": "^2.33.6",
     "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
