--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,7 @@
     "rgbaster": "^2.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "vuex-persistedstate": "^4.0.0"
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/color": "^3.0.2",
