--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,52 +11,53 @@
     "download-graphql-schema": "apollo client:download-schema --endpoint=http://localhost:4000/graphql ./schema.json"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.11",
-    "@vue/apollo-composable": "^4.0.0-alpha.14",
+    "@apollo/client": "^3.4.13",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
     "@vueform/multiselect": "^2.2.0",
     "@vueuse/core": "^5.3.0",
     "color": "^3.2.1",
     "core-js": "^3.6.5",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
+    "immer": "^9.0.6",
     "intersection-observer": "^0.12.0",
-    "register-service-worker": "^1.7.1",
+    "register-service-worker": "^1.7.2",
     "rgbaster": "^2.1.1",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue": "^3.0.11",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/color": "^3.0.2",
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.0.25",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-pwa": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-typescript": "~4.5.13",
+    "@vue/cli-plugin-unit-jest": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
+    "@vue/compiler-sfc": "^3.0.11",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/test-utils": "^2.0.0-rc.14",
     "apollo": "^2.33.6",
     "eslint": "^6.7.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^7.0.1",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
-    "sass": "^1.26.5",
+    "sass": "^1.26.11",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "typescript": "~4.1.6",
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
