--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,9 @@
     "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.1",
+    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^9.5.0",
+    "mock-apollo-client": "^1.2.0",
     "prettier": "^2.2.1",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.2",
